@@ -3269,7 +3269,8 @@ CArray<CMapDrawItem *, CMapDrawItem *> *CNavigatorDlg::GetMapDrawItems(
         box->mRegistration = mCurrentRegistration;
         box->mType = ITEM_TYPE_POLYGON;
         box->mColor = POINT_ACQUIRE_COLOR;
-        box->mDraw = ((mItem && mItem->mDraw && !mItem->mNumSkipHoles) || imBuf->mHasUserPt);
+        box->mDraw = ((mItem && mItem->mDraw && !mItem->mNumSkipHoles) || 
+          imBuf->mHasUserPt);
         if (mItem)
           box->mPieceDrawnOn = mItem->mPieceDrawnOn;
       }
